tests/snapshots/executor_tests__groups.snap
---
source: tests/executor_tests.rs
expression: result
---
ExecResult {
    start: 0,
    end: 15,
    groups: {
        "one": (
            0,
            4,
        ),
        "two": (
            12,
            14,
        ),
    },
}
p: '(?<one>[^ ]+) (?:world) (?<two>foo) '
i: 'hello world foo bar baz'
    ^              ^
