tests/snapshots/executor_tests__groups_simple.snap
---
source: tests/executor_tests.rs
expression: result
---
ExecResult {
    start: 0,
    end: 10,
    groups: {},
}
p: 'h(ell)o w(or)ld'
i: 'hello world foo bar baz'
    ^         ^
