tests/snapshots/executor_tests__lazy_match.snap
---
source: tests/executor_tests.rs
expression: result
---
ExecResult {
    start: 0,
    end: 8,
    groups: {
        "one": (
            0,
            0,
        ),
        "two": (
            2,
            4,
        ),
        "three": (
            6,
            8,
        ),
    },
}
