tests/snapshots/executor_tests__optional_match_branch.snap
---
source: tests/executor_tests.rs
expression: result
---
ExecResult {
    start: 0,
    end: 9,
    groups: {},
}
p: 'hellow?world'
i: 'helloworld'
    ^        ^
