tests/snapshots/executor_tests__optional_match_branch_group.snap
---
source: tests/executor_tests.rs
expression: result
---
ExecResult {
    start: 0,
    end: 9,
    groups: {},
}
p: 'hello(w?)world'
i: 'helloworld'
    ^        ^
