tests/snapshots/executor_tests__or.snap
---
source: tests/executor_tests.rs
expression: result
---
ExecResult {
    start: 0,
    end: 9,
    groups: {},
}
p: 'a (b|c) (c|d)(d|(foo)) (foo|end)'
i: 'a b cd end'
    ^        ^
