tests/snapshots/executor_tests__partial_word_match.snap
---
source: tests/executor_tests.rs
expression: result
---
ExecResult {
    start: 4,
    end: 6,
    groups: {},
}
p: 'bar'
i: 'foo bar baz'
        ^ ^
