tests/snapshots/executor_tests__repetition.snap
---
source: tests/executor_tests.rs
expression: result
---
ExecResult {
    start: 0,
    end: 13,
    groups: {},
}
p: 'fo*b* fo+b? ba{1,3}r{2}'
i: 'foo fooo baarr'
    ^            ^
