tests/snapshots/executor_tests__repetition_range.snap
---
source: tests/executor_tests.rs
expression: result
---
ExecResult {
    start: 0,
    end: 21,
    groups: {},
}
p: 'hel{2}o wo{2,5}rld fo{1,} bar'
i: 'hello woorld foooo bar'
    ^                    ^
