tests/snapshots/executor_tests__set.snap
---
source: tests/executor_tests.rs
expression: result
---
ExecResult {
    start: 0,
    end: 5,
    groups: {},
}
