tests/snapshots/executor_tests__start_end.snap
---
source: tests/executor_tests.rs
expression: result
---
ExecResult {
    start: 0,
    end: 2,
    groups: {},
}
p: '^foo$'
i: 'foo'
    ^ ^
